# rn-stream-opus

./: CONTRIBUTING.md  LICENSE  Opus.podspec  README.md  package-lock.json  package.json  react-native-opus.podspec  react-native.config.js  tsconfig.json
.github/ISSUE_TEMPLATE/: config.yml
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/opus/: OpusModule.kt  OpusPackage.kt
android/src/main/jni/: CMakeLists.txt  OnLoad.cpp
cpp/: NativeOpusTurboModule.cpp  NativeOpusTurboModule.h  react-native-opus.cpp  react-native-opus.h
example/: App.tsx  app.json  package.json  react-native.config.js
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/java/opus/example/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/res/values/: strings.xml
example/ios/: Podfile
example/ios/OpusExample/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
example/ios/OpusExample.xcodeproj/: project.pbxproj
example/ios/OpusExample.xcodeproj/xcshareddata/xcschemes/: OpusExample.xcscheme
example/ios/OpusExample.xcworkspace/: contents.xcworkspacedata
example/ios/example.xcodeproj/: project.pbxproj
example/src/: App.tsx
ios/: OnLoad.mm  Opus.h  Opus.mm
ios/opus.xcframework/: Info.plist
ios/opus.xcframework/ios-arm64/opus.framework/: opus
ios/opus.xcframework/ios-arm64_x86_64-simulator/opus.framework/: opus
lib/commonjs/: index.js  index.js.map
lib/module/: NativeOpusTurboModule.ts  index.js  index.js.map
lib/typescript/commonjs/lib/module/: NativeOpusTurboModule.d.ts.map
lib/typescript/commonjs/src/: NativeOpusTurboModule.d.ts  NativeOpusTurboModule.d.ts.map
lib/typescript/module/lib/commonjs/: NativeOpusTurboModule.d.ts.map
lib/typescript/module/src/: index.d.ts  index.d.ts.map
src/: NativeOpus.ts  NativeOpusTurboModule.ts  index.tsx
